# programowanie-zaliczenie

./: .clang-format  .gitignore  CMakeLists.txt  Plotter.cpp  Plotter.h  README.md  TODO.md  build.sh  clean.sh  make_animation.sh  mergeFrames.py
include/: algebra.h  city.h  exception.h  exceptions.h  line2d.h  person.h  plotter.h  vector2d.h
misc/: pierwszy_okwf.cpp
src/: algebra.cpp  city.cpp  exception.cpp  exceptions.cpp  line2d.cpp  main.cpp  person.cpp  plotter.cpp  vector2d.cpp
src/include/: city.h  config.h  constants.h  exceptions.h  line2d.h  person.h  plotter.h  utils.h  vector2d.h
src/lib/: city.cpp  config.cpp  exceptions.cpp  line2d.cpp  person.cpp  plotter.cpp  utils.cpp  vector2d.cpp
tests/: algebra.cpp  city.cpp  line2d.cpp  person.cpp  vector2d.cpp
